# api_python

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: _helpers.py  generar_orden_qr.py  generar_qr_vinculado.py  obtener_cajas_qr.py  obtener_contracargos.py  obtener_cuentas_cliente.py  obtener_devoluciones.py  obtener_entidades_pago.py  obtener_pagos_adicionales.py  obtener_pagos_por_estado.py  obtener_pagos_por_fecha.py  obtener_pagos_por_id.py  obtener_pagos_por_identificadores_externos.py  obtener_rendiciones.py  obtener_resultado_debito.py  obtener_tarjetas_cliente.py  obtener_terminales_pos.py  obtener_token.py  pago_lote.py  registrar_cuentas_cliente.py  solicitud_pago.py  solicitud_pago_error_parametro_faltante.py  solicitud_pago_lote.py  solicitud_pago_pinpad.py  solicitud_pago_recurrente.py  solicitud_pago_recurrente_suscripcion.py
src/: __init__.py  client.py  types.py
